--- a/html/initiatives.html
+++ b/html/initiatives.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Доступні ініціативи</title>
-    <link rel="stylesheet" href="/css/all.css">
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
-</head>
-<body>
-
+    <link rel="stylesheet" href="/css/all.css" />
+    <script src="/js/initaitives.js"></script>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-
       <div class="head-logo">
         <div class="logo">
           <i class="bx bx-shield-plus"></i>
@@ -29,48 +31,75 @@
     </header>
 
     <main>
-        <h2>Доступні ініціативи</h2>
-        <div class="grid-container">
-            <article class="initiative-card">
-                <img src="/img/img_initiatives/help1.jpg" alt="Допомога дітям">
-                <h3>Допомога дітям</h3>
-                <p><strong>Дата:</strong> 10 березня</p>
-                <p><strong>Місце:</strong> Київ</p>
-                <p><strong>Потрібно волонтерів:</strong> 10</p>
-                <p>Допомога дітям у дитячому будинку.</p>
-                <button class="join-btn">Приєднатися</button>
-            </article>
-            <article class="initiative-card">
-                <img src="/img/img_initiatives/help1.jpg" alt="Допомога дітям">
-                <h3>Прибирання парку</h3>
-                <p><strong>Дата:</strong> 15 березня</p>
-                <p><strong>Місце:</strong> Львів</p>
-                <p><strong>Потрібно волонтерів:</strong> 20</p>
-                <p>Організоване прибирання місцевого парку.</p>
-                <button class="join-btn">Приєднатися</button>
-            </article>
-            <article class="initiative-card">
-                <img src="/img/img_initiatives/help1.jpg" alt="Допомога дітям">
-                <h3>Плетіння сіток</h3>
-                <p><strong>Дата:</strong> 25 березня</p>
-                <p><strong>Місце:</strong> Київ</p>
-                <p><strong>Потрібно волонтерів:</strong> 25</p>
-                <p>Організоване плетіння сіток в місцевій школі.</p>
-                <button class="join-btn">Приєднатися</button>
-            </article>
-            <article class="initiative-card">
-                <img src="/img/img_initiatives/help1.jpg" alt="Допомога дітям">
-                <h3>Прибирання місцевого лісу</h3>
-                <p><strong>Дата:</strong> 30 квітня </p>
-                <p><strong>Місце:</strong> Луцьк</p>
-                <p><strong>Потрібно волонтерів:</strong> 55</p>
-                <p>Потрібно розставити сітки для смітників і прибрати скло</p>
-                <button class="join-btn">Приєднатися</button>
-            </article>
-        </div>
+      <h2>Доступні ініціативи</h2>
+      <div class="grid-container">
+    <article class="initiative-card">
+      <img src="/img/img_initiatives/help1.jpg" alt="Допомога дітям" />
+      <div class="initiative-text">Допомога дітям</div>
+      <h3>Допомога дітям</h3>
+      <p><strong>Дата:</strong> 10 березня</p>
+      <p><strong>Місце:</strong> Київ</p>
+      <p><strong>Потрібно волонтерів:</strong> 10</p>
+      <p>Допомога дітям у дитячому будинку.</p>
+      <button class="join-btn">Приєднатися</button>
+    </article>
+
+        <article class="initiative-card">
+          <img src="/img/img_initiatives/help1.jpg" alt="Допомога дітям" />
+          <div class="initiative-text">Прибирання парку</div>
+          <h3>Прибирання парку</h3>
+          <p><strong>Дата:</strong> 15 березня</p>
+          <p><strong>Місце:</strong> Львів</p>
+          <p><strong>Потрібно волонтерів:</strong> 20</p>
+          <p>Організоване прибирання місцевого парку.</p>
+          <button class="join-btn">Приєднатися</button>
+        </article>
+        <article class="initiative-card">
+          <img src="/img/img_initiatives/help1.jpg" alt="Допомога дітям" />
+                    <div class="initiative-text">Прибирання парку</div>
+          <h3>Плетіння сіток</h3>
+          <p><strong>Дата:</strong> 25 березня</p>
+          <p><strong>Місце:</strong> Київ</p>
+          <p><strong>Потрібно волонтерів:</strong> 25</p>
+          <p>Організоване плетіння сіток в місцевій школі.</p>
+          <button class="join-btn">Приєднатися</button>
+        </article>
+        <article class="initiative-card">
+          <img src="/img/img_initiatives/help1.jpg" alt="Допомога дітям" />
+                    <div class="initiative-text">Прибирання місцевого лісу</div>
+          <h3>Прибирання місцевого лісу</h3>
+          <p><strong>Дата:</strong> 30 квітня</p>
+          <p><strong>Місце:</strong> Луцьк</p>
+          <p><strong>Потрібно волонтерів:</strong> 55</p>
+          <p>Потрібно розставити сітки для смітників і прибрати скло</p>
+          <button class="join-btn">Приєднатися</button>
+        </article>
+          <article class="initiative-card">
+            <img src="/img/img_initiatives/help1.jpg" alt="Допомога дітям" />
+                      <div class="initiative-text">Допомога дітям</div>
+            <h3>Допомога дітям</h3>
+            <p><strong>Дата:</strong> 8 лютого</p>
+            <p><strong>Місце:</strong> Дубно</p>
+            <p><strong>Потрібно волонтерів:</strong> 3</p>
+            <p>Допомога з вивозом сміття</p>
+            <button class="join-btn">Приєднатися</button>
+          </article>
+
+          <article class="initiative-card">
+            <img src="/img/img_initiatives/help1.jpg" alt="Допомога дітям" />
+                      <div class="initiative-text">Допомога дітям</div>
+            <h3>Допомога дітям</h3>
+            <p><strong>Дата:</strong> 3 березня</p>
+            <p><strong>Місце:</strong> Житомир</p>
+            <p><strong>Потрібно волонтерів:</strong> 22</p>
+            <p>Допомога дітям у дитячому будинку.</p>
+            <button class="join-btn">Приєднатися</button>
+          </article>
+        </article>
+      </div>
     </main>
 
- <footer>
+    <footer>
       <p>Приєднуйтесь до нас і станьте частиною змін!</p>
 
       <p>
@@ -81,6 +110,5 @@
 
       <a href="#">Політика конфіденційності</a>
     </footer>
-
-</body>
+  </body>
 </html>
