--- a/html/my-initiatives.html
+++ b/html/my-initiatives.html
@@ -6,6 +6,8 @@
     <title>Мої ініціативи</title>
     <link rel="stylesheet" href="/css/all.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <script src="/js/my-initiatives.js"></script>
+
 </head>
 <body>
 
