--- a/html/about.html
+++ b/html/about.html
@@ -11,7 +11,6 @@
     <div class="background-photo"></div>
     
     <header>
-
       <div class="head-logo">
         <div class="logo">
           <i class="bx bx-shield-plus"></i>
@@ -25,6 +24,10 @@
           <li><a href="/html/initiatives.html">Доступні ініціативи</a></li>
           <li><a href="/html/my-initiatives.html">Мої ініціативи</a></li>
           <li><a href="/html/about.html">Про нас</a></li>
+
+
+          <li class="log_in_m"><a href="/html/log_in.html">Увійти <i class='bx bx-log-in' ></i></a></li>
+          <li class="sign_up_m"><a href="/html/sign_up.html">Зареєструватися <i class='bx bx-log-in-circle' ></i></a></li>
         </ul>
       </nav>
     </header>
