--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,10 @@
           <li><a href="/html/initiatives.html">Доступні ініціативи</a></li>
           <li><a href="/html/my-initiatives.html">Мої ініціативи</a></li>
           <li><a href="/html/about.html">Про нас</a></li>
+
+
+          <li class="log_in_m"><a href="/html/log_in.html">Увійти <i class='bx bx-log-in' ></i></a></li>
+          <li class="sign_up_m"><a href="/html/sign_up.html">Зареєструватися <i class='bx bx-log-in-circle' ></i></a></li>
         </ul>
       </nav>
     </header>
