--- a/html/log_in.html
+++ b/html/log_in.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Доступні ініціативи</title>
-    <link rel="stylesheet" href="/css/all.css" />
-    <script defer src="/js/initaitives.js"></script>
+    <title>Helping Hands</title>
+    <link rel="stylesheet" href="/css/log_in.css" />
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -19,32 +18,48 @@
           <h4>Helping Hands</h4>
         </div>
       </div>
+
       <nav>
         <ul>
           <li><a href="/html/index.html">Головна</a></li>
           <li><a href="/html/initiatives.html">Доступні ініціативи</a></li>
           <li><a href="/html/my-initiatives.html">Мої ініціативи</a></li>
           <li><a href="/html/about.html">Про нас</a></li>
+
+
           <li class="log_in_m"><a href="/html/log_in.html">Увійти <i class='bx bx-log-in' ></i></a></li>
           <li class="sign_up_m"><a href="/html/sign_up.html">Зареєструватися <i class='bx bx-log-in-circle' ></i></a></li>
         </ul>
       </nav>
     </header>
 
-    <main>
-      <h2>Доступні ініціативи</h2>
-      <div class="grid-container" id="initiatives-container">
-        <!-- Ініціативи будуть додані через JavaScript -->
-      </div>
-    </main>
+
+        <section class="main-sect">
+        <div class="main-sect-text">
+            <h2>Вхід до акаунту</h2>
+            <form class="login-form">
+                <label for="email">Електронна пошта:</label>
+                <input type="email" id="email" name="email" required>
+                
+                <label for="password">Пароль:</label>
+                <input type="password" id="password" name="password" required>
+                
+                <button type="submit" class="btn">Увійти</button>
+            </form>
+        </div>
+    </section>
+
+
 
     <footer>
       <p>Приєднуйтесь до нас і станьте частиною змін!</p>
+
       <p>
         Контакти:
         <a href="mailto:volunteer@initiative.org">volunteer@initiative.org</a> |
         <a href="tel:+380991234567">+380 99 123 45 67</a>
       </p>
+
       <a href="#">Політика конфіденційності</a>
     </footer>
   </body>
