--- a/html/my-initiatives.html
+++ b/html/my-initiatives.html
@@ -7,44 +7,42 @@
     <link rel="stylesheet" href="/css/all.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <script src="/js/my-initiatives.js"></script>
-
 </head>
 <body>
 
     <header>
-
-      <div class="head-logo">
-        <div class="logo">
-          <i class="bx bx-shield-plus"></i>
-          <h4>Helping Hands</h4>
+        <div class="head-logo">
+            <div class="logo">
+                <i class="bx bx-shield-plus"></i>
+                <h4>Helping Hands</h4>
+            </div>
         </div>
-      </div>
 
-      <nav>
-        <ul>
-          <li><a href="/html/index.html">Головна</a></li>
-          <li><a href="/html/initiatives.html">Доступні ініціативи</a></li>
-          <li><a href="/html/my-initiatives.html">Мої ініціативи</a></li>
-          <li><a href="/html/about.html">Про нас</a></li>
-        </ul>
-      </nav>
+        <nav>
+            <ul>
+                <li><a href="/html/index.html">Головна</a></li>
+                <li><a href="/html/initiatives.html">Доступні ініціативи</a></li>
+                <li><a href="/html/my-initiatives.html">Мої ініціативи</a></li>
+                <li><a href="/html/about.html">Про нас</a></li>
+                <li class="log_in_m"><a href="/html/log_in.html">Увійти <i class='bx bx-log-in' ></i></a></li>
+                <li class="sign_up_m"><a href="/html/sign_up.html">Зареєструватися <i class='bx bx-log-in-circle' ></i></a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main>
+    <main id="my-initiatives-container">
         <h2>Мої ініціативи</h2>
         <p>Ви ще не приєдналися до жодної ініціативи.</p>
     </main>
 
- <footer>
-      <p>Приєднуйтесь до нас і станьте частиною змін!</p>
-
-      <p>
-        Контакти:
-        <a href="mailto:volunteer@initiative.org">volunteer@initiative.org</a> |
-        <a href="tel:+380991234567">+380 99 123 45 67</a>
-      </p>
-
-      <a href="#">Політика конфіденційності</a>
+    <footer>
+        <p>Приєднуйтесь до нас і станьте частиною змін!</p>
+        <p>
+            Контакти:
+            <a href="mailto:volunteer@initiative.org">volunteer@initiative.org</a> |
+            <a href="tel:+380991234567">+380 99 123 45 67</a>
+        </p>
+        <a href="#">Політика конфіденційності</a>
     </footer>
 
 </body>
